syntax = "proto3";

package user;

option go_package = "./pb";

service UserService{
    rpc Register(RequestRegister) returns (ResponseRegister);
    rpc Login(RequestLogin) returns (ResponseLogin);
    rpc UpdatePassword(RequestUpdate) returns (ResponseUpdate);
}

message RequestRegister {
    string username = 1;
    string password = 2;
    string name = 3;
    string email = 4;
    string city = 5;
}

message ResponseRegister{
    string message = 1;
    bool success = 2;
}

message RequestLogin {
    string username = 1;
    string password = 2;
}

message ResponseLogin{
    bool success = 1;
    string status = 2;
}

message RequestUpdate{
		string id = 1;
		string password = 2;
}

message ResponseUpdate{
		string message = 1;
		bool success = 2;
}