syntax = "proto3";

package weather;

option go_package = "./pb";

service WeatherService{
    rpc Register(RequestRegister) returns (ResponseRegister);
}

message RequestRegister {
    string username = 1;
    string password = 2;
    string name = 3;
    string email = 4;
    string city = 5;
}

message ResponseRegister{
    string message = 1;
    bool success = 2;
}
message RequestLogin {
    string username = 1;
    string password = 2;
}

message ResponseLogin{
    bool success = 1;
    string status = 2;
}

message RequestWeather {
    string city = 1;
}

message ResponseWeather{
    double temperature = 1;
    string country = 2;
    string city = 3;
    string time = 4;
}